add animation and loader

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 
 
 // Light Mode
-$lightMode: linear-gradient(180deg, #fff, #e2ebf0);
+$lightMode: linear-gradient(90deg, #fff, #f3f3f3, #e2ebf0);
 $darkText: #323232;
 
 // Dark Mode
@@ -132,14 +132,29 @@ body {
       font-size: calc(0.25vw + 1.75vh)
     }
 
+    .avatar {
+      outline: 3px solid #5c5c5c;
+      border: 2px solid #f3f3f3;
+      border-radius: 50%;
+    }
+
     .avatar-img {
       display: block;
-      background-image: url('./assets/avatar_profile.jpg');
+      background-image: url('./assets/avatar-2.jpg');
+      background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
       border-radius: 50%;
+      
       width: 150px;
       height: 150px;
+      transition: all 0.3s ease-in-out;
+      
+      &:hover {
+        background-image: url('./assets/avatar_profile.jpg');
+        transform: rotateY(360deg);
+        transition: all 0.3s ease-in-out;
+      }
     }
 
     .icons {
