--- a/src/index.scss
+++ b/src/index.scss
@@ -193,7 +193,7 @@ body {
   // Project Page
 
   .project-container {
-    height: 75vh;
+    min-height: 50vh;
 
     @media screen and (max-width: 600px) {
       .proj-details {
@@ -211,6 +211,7 @@ body {
       transition: all 0.3s ease-in-out;
     }
   }
+
   // Project Details
   #proj-detail {
     p {
@@ -221,7 +222,7 @@ body {
       }
     }
     
-    .project-container {
+    .proj-detail-container {
 
       .img-overlay {
         position: absolute;
@@ -229,11 +230,22 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         display: none;
-        
+
+        @media screen and (max-width: 900px) {
+          top: 30%
+        }
+        @media screen and (max-width: 900px) {
+          top: 40%
+        }
+
         .icons {
           font-size: 50px;
           color: #323232;
           transition: 0.5s;
+
+          @media screen and (max-width: 900px) {
+            font-size: 20px;
+          }
 
           &:hover {
             cursor: pointer;
@@ -256,14 +268,12 @@ body {
           justify-content: space-between;
         }
         .project-image {
-          opacity: 0.3;
+          opacity: 0.2;
           transition: 0.5s;
         }
       }
     }
   }
-
-  // Blog Page
 
   // Loader
 
