move assets to public folder

--- a/src/index.scss
+++ b/src/index.scss
@@ -124,7 +124,7 @@ body {
 
     .avatar-img {
       display: block;
-      background-image: url("./assets/avatar-2.jpg");
+      background-image: url("/assets/avatar-2.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
