--- a/src/index.scss
+++ b/src/index.scss
@@ -135,7 +135,7 @@ body {
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        background-image: url("./assets/avatar_profile.jpg");
+        background-image: url("/assets/avatar_profile.jpg");
         transform: rotateY(360deg);
         transition: all 0.3s ease-in-out;
       }
