--- a/src/index.scss
+++ b/src/index.scss
@@ -89,7 +89,9 @@ body {
 
   // Footer
   .footer {
-    z-index: -1000;
+   @media screen and (max-width: 768px){
+    position: relative;
+   } 
   }
 
   // Home Page
