--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,10 @@ $light-color: #f7f7f7;
   color: $color;
 }
 
+.bold {
+  font-weight: 600;
+}
+
 // Body Styling
 body {
   position: relative;
@@ -112,6 +116,17 @@ body {
         transform: rotateY(360deg);
         transition: all 0.3s ease-in-out;
       }
+    }
+  }
+
+  @media (max-width: 800px){
+    .dark {
+      background: $dark-bg;
+      
+    }
+    .light {
+      background: $light-bg;
+      
     }
   }
 
